# yashl-back

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  TERRAFORM.md  base_62_converter.py  dynamodb.py  generate_key.py  models.py  pyproject.toml  tasks.py  terraform-implementation-plan.md  terraform.tfstate
.github/workflows/: deploy_lambda.yml
infra/: lambda.tf  main.tf  variables.tf
provisions/: functions.py
src/: captureScreenshot.js  capture_screenshot.py  create_direct_document.py  create_redirect_document.py  generate_key.py  list_key.py  resolve_key.py
src/captureScreenshot/: index.js  package-lock.json
src/functions/captureScreenshot/: index.js
src/functions/create_direct_document/: create_direct_document.py
src/functions/generate_key/: generate_key.py
src/functions/key/: key.py
src/functions/list_key/: list_key.py
src/functions/redirect/: redirect.py  test.py
src/functions/resolve_key/: resolve_key.py
src/functions/streaming/: streaming.py
src/functions/trelloScreenshot/: package-lock.json
src/layers/browser-automation/nodejs/: package-lock.json
src/layers/browser-automation/nodejs/lib/: browser-automation.js
src/yashl_back/functions/: .env.template
src/yashl_back/functions/captureScreenshot/: index.js  package.json  test.js
src/yashl_back/functions/create_direct_document/: create_direct_document.py
src/yashl_back/functions/key/: key.py
src/yashl_back/functions/streaming/: streaming.py
src/yashl_back/functions/trelloScreenshot/: index.js  package.json  test.js
(+3 files in other folders)
