[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yashl-back"
version = "0.1.0"
authors = [
    { name = "Hung Hoang", email = "arsenalforeversince2007@gmail.com" },
]
description = "Backend for YASHL project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["yashl_back*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]
